--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./js/index.css">
     <!-- import JavaScript -->
     <script src="./js/element-plus.js"></script>
+    <script src="./js/vconsole.min.js"></script>
 <body>
 
     <div id="app">
