--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <div id="app">
         <el-upload
             class="upload-demo"
-            action="./uploadFile">
+            action="/uploadFile">
         <el-button type="primary">传文件</el-button>
     </el-upload>
         <h2>列表</h2>
