--- a/public/index.html
+++ b/public/index.html
@@ -16,9 +16,15 @@
 <body>
 
     <div id="app">
+        <form enctype="multipart/form-data">
+            <input name="file" type="file" />
+            <input id="upload" type="button" value="Upload" />
+        </form>
         <el-upload
             class="upload-demo"
-            action="/uploadFile">
+            :change="handleChange"
+    
+            :action="'/uploadFile'">
         <el-button type="primary">传文件</el-button>
     </el-upload>
         <h2>列表</h2>
@@ -47,8 +53,44 @@
             },
             mounted() {
                this.getList();
+               $('#upload').on('click', function () {
+                $.ajax({
+                    // Your server script to process the upload
+                    url: '/uploadFile',
+                    type: 'POST',
+
+                    // Form data
+                    data: new FormData($('form')[0]),
+
+                    // Tell jQuery not to process data or worry about content-type
+                    // You *must* include these options!
+                    cache: false,
+                    contentType: false,
+                    processData: false,
+
+                    // Custom XMLHttpRequest
+                    xhr: function () {
+                    var myXhr = $.ajaxSettings.xhr();
+                    if (myXhr.upload) {
+                        // For handling the progress of the upload
+                        myXhr.upload.addEventListener('progress', function (e) {
+                        if (e.lengthComputable) {
+                            $('progress').attr({
+                            value: e.loaded,
+                            max: e.total,
+                            });
+                        }
+                        }, false);
+                    }
+                    return myXhr;
+                    }
+                });
+                });
             },
             methods: {
+                handleChange(file, fileList) {
+                    console.log(file, fileList);
+                },
                 getList(keyword) {
                     const self = this;
                     $.get('/getSource', {
